--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arafat Menu</title>
+    <title>cocount 🥥</title>
   </head>
   <body>
-    <div id="root" translate="no"></div>
+    <div id="root" class="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
